<resources>
    <string name="app_name">Bingle</string>
    <string name="app_logo">App Logo</string>
    <string name="login_button">Login</string>
    <string name="password_button">Password</string>
    <string name="welcome_button">Welcome,</string>
    <string name="email_textView">Email</string>
    <string name="signintocontinue_TextView">Sign in to continue</string>
    <string name="forgot_password_Button">Forgot Password?</string>
    <string name="New_user_TextView">New user?</string>
    <string name="sign_up_Button">Sign Up</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_your_account_TextView">Create your Account</string>
    <string name="already_have_an_account_TextView">Already have an account?</string>
    <string name="confirm_password_TextView">Confirm Password</string>

    <!-- Strings related to Facebook login -->
    <string name="facebook_app_id">1563572840418592</string>
    <string name="fb_login_protocol_scheme">fb1563572840418592</string>

    <string name="enter_your_registered_email_TextView">Enter your registered email</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_fragment_find_date">FindDate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_fragment_notifications">Notifications</string>
    <string name="title_fragment_settings">Unknown</string>
    <string name="title_fragment_fixed_date">Date</string>
    <string name="title_fragment_profile_settings">Profile</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_settings">Profile</string>
    <string name="title_activity_fixed_date">Date</string>
    <string name="title_notifications">Notifications</string>
    <string name="reset_password_Button">Reset Password</string>
    <string name="OR_textview">OR</string>


    <!-- Strings related to Profile Settings -->
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="city_hint">Enter the City you live in</string>
    <string name="person_name">Name</string>
    <string name="place">Place - City</string>
    <string name="name_hint">Enter your Full Name</string>
    <string name="dob_hint">Your date of birth</string>
    <string name="bio_hint">Write about yourself</string>
    <string name="gender_hint">Male/Female</string>
    <string name="person_dob">DOB</string>
    <string name="person_gender">Gender</string>
    <string name="person_bio">Bio</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_button">Share Button</string>
    <string name="title_fragment_bio_preference">Bio</string>
    <string name="preference">Preference</string>
    <string name="college">College</string>
    <string name="enter_your_college">Enter your college</string>
    <string name="interests">Interests</string>
    <string name="enter_your_interests">Enter your interests</string>
    <string name="age">Age</string>
    <string name="enter_preferred_age">Enter preferred age</string>
    <string name="enter_your_bio">Enter your bio</string>
    <string name="save">Continue</string>
    <string name="completeProfile_profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="textview">TextView</string>
    <string name="e_mail">E-mail</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="matching_age">Matching Age</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="education">Education</string>
    <string name="write_about_yourself">Write about Yourself</string>
    <string name="min_age">Min Age</string>
    <string name="save_profile">Save Profile</string>
    <string name="max_age">Max Age</string>


</resources>
