<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_edit"
<<<<<<< HEAD
        android:title="@string/title_fragment_settings" />
||||||| merged common ancestors
        android:onClick="@string/title_activity_settings"
        android:title="@string/title_activity_settings" />
=======
        android:title="@string/title_activity_settings" />
>>>>>>> 8d66371f78bcd10fbd22be25b54885ec8b384a11

    <item
        android:id="@+id/navigation_find_date"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/app_name" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
<<<<<<< HEAD
        android:title="@string/title_fragment_notifications" />
||||||| merged common ancestors
        android:onClick="@string/title_activity_notifications"
        android:title="@string/title_activity_notifications" />
=======
        android:title="@string/title_activity_notifications" />
>>>>>>> 8d66371f78bcd10fbd22be25b54885ec8b384a11

    <item
        android:id="@+id/navigation_fixed_date"
        android:icon="@android:drawable/ic_menu_view"
<<<<<<< HEAD
        android:title="@string/title_fragment_fixed_date" />
||||||| merged common ancestors
        android:onClick="@string/title_activity_fixed_date"
        android:title="@string/title_activity_fixed_date" />
=======
        android:title="@string/title_activity_fixed_date" />
>>>>>>> 8d66371f78bcd10fbd22be25b54885ec8b384a11

</menu>
